<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_blogs"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/blogs"/>
        <item
                android:id="@+id/nav_faq"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/faq"/>
        <item
                android:id="@+id/nav_terms"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/terms"/>
        <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/about_us"/>

        <item
                android:id="@+id/nav_privacy"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/privacy"/>
        <item
                android:id="@+id/nav_contact_us"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/contact_us"/>

        <item
                android:id="@+id/nav_signout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/signout"/>

    </group>


</menu>
